--- a/16.Tema pentru 18-01-2021 (ghicitoare)/index.html
+++ b/16.Tema pentru 18-01-2021 (ghicitoare)/index.html
@@ -14,7 +14,9 @@
         <h1>Guess the number</h1>
         <input type="text" name="" id="text" placeholder="Put a number">
         <input type="button" value="find out" id="button">
-        <div id="result"></div>
+        <div>
+            <p id="result"></p>
+        </div>
     </div>
 </body>
 
